tests/NormalTests/paczka1/fuzzy1/50274452.err
Error in line 2: fCF S772 16,9
Error in line 3: fCF A334 63,6
Error in line 10: 3AF6BO6tj S26 93,0
Error in line 12: 66dqIEWY S26 95,3
Error in line 18: 66dqIEWY S325 19,8
Error in line 16: S26 S772 31,8
Error in line 17: fCF S772 119,7
Error in line 28: sHOfi S325 23,1
Error in line 29: sHOfi S772 75,5
